--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.3.0"
+  }
 }
