--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.4.1",
     "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
+    "iso8601-duration": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
